# realm-core

./: .gitignore  Android.bp  CMakeLists.txt  CMakeSettings.json
Visual Studio/uwp_demo/: App1.vcxproj
src/: CMakeLists.txt
src/realm/: CMakeLists.txt  tokenizer.cpp
src/realm/exec/: CMakeLists.txt
src/realm/object-store/: CMakeLists.txt
src/realm/object-store/c_api/: CMakeLists.txt
src/realm/parser/: CMakeLists.txt
src/realm/sync/: CMakeLists.txt
src/realm/sync/network/: network_ssl.cpp  network_ssl.hpp
src/realm/sync/noinst/server/: CMakeLists.txt  crypto_server_openssl.cpp
src/realm/sync/tools/: CMakeLists.txt
src/realm/util/: aes_cryptor.hpp  config.h.in  encrypted_file_mapping.cpp  sha_crypto.cpp
test/: CMakeLists.txt  test_sync.cpp  test_util_network_ssl.cpp
test/benchmark-common-tasks/: CMakeLists.txt
test/benchmark-crud/: CMakeLists.txt
test/benchmark-larger/: CMakeLists.txt
test/benchmark-sync/: CMakeLists.txt
test/fuzzy/: CMakeLists.txt
test/object-store/: CMakeLists.txt
test/object-store/benchmarks/: CMakeLists.txt
test/realm-fuzzer/: CMakeLists.txt
test/util/: CMakeLists.txt
tools/: cross_compile.sh
