if(REALM_ENABLE_SYNC)
    add_executable(realm-benchmark-sync bench_transform.cpp ../test_all.cpp)
    add_dependencies(benchmarks realm-benchmark-sync)
    # Sync lib is included with SyncServer
    target_link_libraries(realm-benchmark-sync TestUtil SyncServer)
    if("${CMAKE_GENERATOR}" MATCHES "Visual Studio")
    else()
        message(STATUS "")
        message(STATUS "realm-benchmark-sync REALM_ENABLE_ENCRYPTION UNIX target_include_directories '${REALM_WOLFSSL_ROOT_DIR}/include'")
        target_include_directories(realm-benchmark-sync PRIVATE ${REALM_WOLFSSL_ROOT_DIR}/include)
        message(STATUS "")
    endif()
endif()