if(REALM_ENABLE_SYNC)
    add_executable(realm-benchmark-sync bench_transform.cpp ../test_all.cpp)
    add_dependencies(benchmarks realm-benchmark-sync)
    # Sync lib is included with SyncServer
    target_link_libraries(realm-benchmark-sync TestUtil SyncServer)
    if("${CMAKE_GENERATOR}" MATCHES "Visual Studio")
        message(STATUS "realm-benchmark-sync target_include_directories not used for Visual Studio project. (see project properties)")
    else()
        if(REALM_HAVE_WOLFSSL)
            message(STATUS "realm-benchmark-sync REALM_ENABLE_ENCRYPTION UNIX target_include_directories '${REALM_WOLFSSL_ROOT_DIR}/include'")
            target_include_directories(realm-benchmark-sync PRIVATE ${REALM_WOLFSSL_ROOT_DIR}/include)
        else()
            message(STATUS "REALM_HAVE_WOLFSSL is not enabled for realm-benchmark-sync.")
        endif()
    endif()
endif()